@@ -163,6 +163,18 @@ input.searchButton{
 * html #cnx_portal-breadcrumbs{padding-top: 2px;}
 *+html #cnx_portal-breadcrumbs{padding-top: 2px;}
 
+/* ===== light-weight branding ==========*/
+
+#cnx_branding_banner{
+  padding: 0.35em 15px 0.45em;
+  font-size: .9em;
+}
+
+#cnx_branding_logo{
+  text-align: center;
+  margin: -15px 0 2em;
+}
+
 /* ===== some basic elements ===== */
 
 p{
